--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
      <link rel="stylesheet" href="css/font-awesome.min.css">
      <link rel="stylesheet" href="css/owl.carousel.css">
      <link rel="stylesheet" href="css/owl.theme.default.min.css">
-     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+
      <!-- Google Web Fonts -->
      <link rel="preconnect" href="https://fonts.gstatic.com">
      <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet"> 
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
      <!-- MAIN CSS -->
      <link rel="stylesheet" href="css/style.css">
      <link rel="apple-touch-icon" sizes="57x57" href="Images/favicon/apple-icon-57x57.png">
@@ -105,7 +105,7 @@
                               <div class="container">
                                    <div class="col-md-6 col-sm-12">
                                         <h1>Start your journey with our offline courses</h1>
-                                        <h3>At GENIUS PSC Coaching Centre, we are committed to helping you achieve your dreams of securing government jobs in various departments like LDC, LGS, LP/UP, Civil Police Officer, and more. Our primary goal is to provide intensive training and guidance to individuals aiming for a career in the public sector.</h3>
+                                        <h3>GENIUS PSC Coaching Centre </b>- Your Path to Government Job Success!</h3>
                                         
                                    </div>
                               </div>
@@ -117,7 +117,7 @@
                               <div class="container">
                                    <div class="col-md-6 col-sm-12">
                                         <h1>Efficient Learning Methods</h1>
-                                        <h3>GENIUS PSC Coaching Centre </b>- Your Path to Government Job Success!</h3>
+                                        <h3>At GENIUS PSC Coaching Centre, we are committed to helping you achieve your dreams of securing government jobs.</h3>
                                    </div>
                               </div>
                          </div>
@@ -202,7 +202,7 @@
                               <figure>
                                    <span><i class="fa fa-id-card-o" aria-hidden="true"></i></span>
                                    <figcaption>
-                                        <h3>Free Admissions</h3>
+                                        <h3>Hybrid Admissions</h3>
                                         <p>For early birds starting their PSC exam preparations, we offer admission to our LDC CORE and LP/UP SURE batches without an admission fee.</p>
                                    </figcaption>
                               </figure>
@@ -410,50 +410,50 @@
 
      <div class="blog-home2 py-5">
           <div class="container">
-            <!-- Row  -->
-            <div class="row justify-content-center">
-              <!-- Column -->
-              <div class="col-md-12">
-                <center><h2 class="my-3">UPCOMING EVENTS</h2></center>
-                <!-- <h6 class="subtitle font-weight-normal">You can relay on our amazing features list and also our customer services will be great experience for you without doubt</h6> -->
-              </div>
-              <!-- Column -->
-              <!-- Column -->
-            </div>
-            <div class="row mt-4">
-              <!-- Column -->
-              <div class="col-md-4 on-hover">
-                <div class="card border-0 mb-4">
-                  <a href="#"><img class="card-img-top" src="Images/+2 main.png" alt="wrappixel kit"></a>
-                  <div class="date-pos bg-info-gradiant p-2 d-inline-block text-center rounded text-white position-absolute">OCT<span class="d-block">23</span></div>
-                  <h5 class="font-weight-medium mt-3"><a href="#" class="text-decoration-none link">You should have eagle’s eye on new trends and techonogies</a></h5>
-                  <p class="mt-3">Bus Stand Building, Ramanattukara, Kozhikode</p>
-                  <!-- <a href="#" class="text-decoration-none linking text-themecolor mt-2">Learn More</a> -->
-                </div>
-              </div>
-              <!-- Column -->
-              <div class="col-md-4 on-hover">
-                <div class="card border-0 mb-4">
-                  <a href="#"><img class="card-img-top" src="Images/degreemain.png" alt="wrappixel kit"></a>
-                  <div class="date-pos bg-info-gradiant p-2 d-inline-block text-center rounded text-white position-absolute">OCT<span class="d-block">23</span></div>
-                  <h5 class="font-weight-medium mt-3"><a href="#" class="text-decoration-none link">New Seminar on Newest Food Recipe from World’s Best</a></h5>
-                  <p class="mt-3">Bus Stand Building, Ramanattukara, Kozhikode</p>
-                  <!-- <a href="#" class="text-decoration-none linking text-themecolor mt-2">Learn More</a> -->
-                </div>
-              </div>
-              <!-- Column -->
-              <div class="col-md-4 on-hover">
-                <div class="card border-0 mb-4">
-                  <a href="#"><img class="card-img-top" src="Images/si.jpg" alt="wrappixel kit"></a>
-                  <div class="date-pos bg-info-gradiant p-2 d-inline-block text-center rounded text-white position-absolute">OCT<span class="d-block">23</span></div>
-                  <h5 class="font-weight-medium mt-3"><a href="#" class="text-decoration-none link">Learn from small things to create something bigger.</a></h5>
-                  <p class="mt-3">Bus Stand Building, Ramanattukara, Kozhikode</p>
-                  <!-- <a href="#" class="text-decoration-none linking text-themecolor mt-2">Learn More</a> -->
-                </div>
-              </div>
-            </div>
+               <!-- Row  -->
+               <div class="row justify-content-center">
+               <!-- Column -->
+               <div class="col-md-12">
+                    <center><h2 class="my-3">UPCOMING EVENTS</h2></center>
+                    <!-- <h6 class="subtitle font-weight-normal">You can relay on our amazing features list and also our customer services will be great experience for you without doubt</h6> -->
+               </div>
+               <!-- Column -->
+               <!-- Column -->
+               </div>
+               <div class="row mt-4">
+               <!-- Column -->
+               <div class="col-md-4 on-hover">
+                    <div class="card border-0 mb-4">
+                    <a href="#"><img class="card-img-top" src="Images/+2 main.png" alt="wrappixel kit"></a>
+                    <div class="date-pos bg-info-gradiant p-2 d-inline-block text-center rounded text-white position-absolute">OCT<span class="d-block">23</span></div>
+                    <h5 class="font-weight-medium mt-3"><a href="#" class="text-decoration-none link">You should have eagle’s eye on new trends and techonogies</a></h5>
+                    <p class="mt-3">Bus Stand Building, Ramanattukara, Kozhikode</p>
+                    <!-- <a href="#" class="text-decoration-none linking text-themecolor mt-2">Learn More</a> -->
+                    </div>
+               </div>
+               <!-- Column -->
+               <div class="col-md-4 on-hover">
+                    <div class="card border-0 mb-4">
+                    <a href="#"><img class="card-img-top" src="Images/degreemain.png" alt="wrappixel kit"></a>
+                    <div class="date-pos bg-info-gradiant p-2 d-inline-block text-center rounded text-white position-absolute">OCT<span class="d-block">23</span></div>
+                    <h5 class="font-weight-medium mt-3"><a href="#" class="text-decoration-none link">New Seminar on Newest Food Recipe from World’s Best</a></h5>
+                    <p class="mt-3">Bus Stand Building, Ramanattukara, Kozhikode</p>
+                    <!-- <a href="#" class="text-decoration-none linking text-themecolor mt-2">Learn More</a> -->
+                    </div>
+               </div>
+               <!-- Column -->
+               <div class="col-md-4 on-hover">
+                    <div class="card border-0 mb-4">
+                    <a href="#"><img class="card-img-top" src="Images/si.jpg" alt="wrappixel kit"></a>
+                    <div class="date-pos bg-info-gradiant p-2 d-inline-block text-center rounded text-white position-absolute">OCT<span class="d-block">23</span></div>
+                    <h5 class="font-weight-medium mt-3"><a href="#" class="text-decoration-none link">Learn from small things to create something bigger.</a></h5>
+                    <p class="mt-3">Bus Stand Building, Ramanattukara, Kozhikode</p>
+                    <!-- <a href="#" class="text-decoration-none linking text-themecolor mt-2">Learn More</a> -->
+                    </div>
+               </div>
+               </div>
+               </div>
           </div>
-        </div>
 
      <!-- TEAM -->
      <section id="team">
