--- a/about.html
+++ b/about.html
@@ -151,7 +151,7 @@
 						  <figure>
 							  <span><i class="fa fa-id-card-o" aria-hidden="true"></i></span>
 							  <figcaption>
-								  <h3>Free Admissions</h3>
+								  <h3>Hybrid Admissions</h3>
 								  <p>For early birds starting their PSC exam preparations, we offer admission to our LDC CORE and LP/UP SURE batches without an admission fee.</p>
 							  </figcaption>
 						  </figure>
