--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                          <div class="caption">
                               <div class="container">
                                    <div class="col-md-6 col-sm-12">
-                                        <h1>Start your journey with our offline courses</h1>
-                                        <h3>GENIUS PSC Coaching Centre </b>- Your Path to Government Job Success!</h3>
+                                        <!-- <h1>Start your journey with our offline courses</h1>
+                                        <h3>GENIUS PSC Coaching Centre </b>- Your Path to Government Job Success!</h3> -->
                                         
                                    </div>
                               </div>
@@ -406,6 +406,8 @@
 
      <!-- Events -->
 
+     
+
      <div class="blog-home2 py-5">
           <div class="container">
                <!-- Row  -->
@@ -503,7 +505,7 @@
                          <ul class="webintern-footer-list">
                               <li><a href="https://maps.app.goo.gl/DquxyJBjNRUhzWoy5" target="_blank"><i class="fa fa-map-marker" aria-hidden="true"></i> Bus Stand Building, Ramanattukara</a></li>
                               <li><a href="tel:9061099923"><i class="fa fa-phone" aria-hidden="true"></i> 9061099923</a></li>
-                              <li><a href="mailto: geniusramanattukara@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i>geniusramanattukara@gmail.com</a></li>
+                              <li><a href="mailto: geniusramanattukara@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i> Click to Email</a></li>
                          </ul>
                          <!-- TT-SOCIAL -->
                          <!-- <ul class="tt-social">
